--- a/LRAtsSDKSample/Internal/Base.lproj/Main.storyboard
+++ b/LRAtsSDKSample/Internal/Base.lproj/Main.storyboard
@@ -48,6 +48,7 @@
                                 <rect key="frame" x="20" y="170" width="353" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Get Envelope">
+                                    <color key="baseForegroundColor" name="ButtonTextColor"/>
                                     <color key="baseBackgroundColor" name="LRColor"/>
                                 </buttonConfiguration>
                                 <connections>
@@ -114,6 +115,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="ButtonTextColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="LRColor">
             <color red="0.42745098469999998" green="0.84705877299999999" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
