--- a/LRAtsSDKSample/Internal/Base.lproj/Main.storyboard
+++ b/LRAtsSDKSample/Internal/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -45,7 +44,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="14k-2U-j53">
-                                <rect key="frame" x="20" y="170" width="353" height="35"/>
+                                <rect key="frame" x="20" y="160" width="353" height="34.333333333333343"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Get Envelope">
                                     <color key="baseForegroundColor" name="ButtonTextColor"/>
@@ -56,16 +55,16 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Envelope result:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJY-sH-MLx">
-                                <rect key="frame" x="20" y="225" width="353" height="17"/>
+                                <rect key="frame" x="20" y="204.33333333333334" width="353" height="17"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EXc-8Q-t4s">
-                                <rect key="frame" x="20" y="252" width="353" height="100"/>
+                                <rect key="frame" x="20" y="231.33333333333337" width="353" height="100"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="2QE-un-DSG"/>
+                                    <constraint firstAttribute="height" priority="750" constant="100" id="MRJ-Og-ggJ"/>
                                 </constraints>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="13"/>
@@ -83,19 +82,43 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FyG-LW-raV">
+                                <rect key="frame" x="20" y="341.33333333333326" width="353" height="466.66666666666674"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                        <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="14k-2U-j53" firstAttribute="top" secondItem="tej-o5-mXW" secondAttribute="bottom" constant="20" id="2uM-ST-lMM"/>
+                            <constraint firstItem="14k-2U-j53" firstAttribute="top" secondItem="tej-o5-mXW" secondAttribute="bottom" constant="10" id="2uM-ST-lMM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FyG-LW-raV" secondAttribute="bottom" constant="10" id="74O-oC-nWW"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tej-o5-mXW" secondAttribute="trailing" constant="20" id="ATd-zH-Dwt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bhj-7U-S1Y" secondAttribute="trailing" constant="20" id="AY2-QZ-J7t"/>
                             <constraint firstItem="Bhj-7U-S1Y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Agk-4Q-9Q9"/>
                             <constraint firstItem="EXc-8Q-t4s" firstAttribute="top" secondItem="PJY-sH-MLx" secondAttribute="bottom" constant="10" id="GaH-5Z-iRe"/>
                             <constraint firstItem="14k-2U-j53" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="HEL-x3-AIn"/>
                             <constraint firstItem="EXc-8Q-t4s" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Hlo-iX-JWA"/>
+                            <constraint firstItem="FyG-LW-raV" firstAttribute="height" relation="greaterThanOrEqual" secondItem="EXc-8Q-t4s" secondAttribute="height" multiplier="2" id="MS4-er-zUS"/>
                             <constraint firstItem="Bhj-7U-S1Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="SSi-Ui-sHk"/>
-                            <constraint firstItem="PJY-sH-MLx" firstAttribute="top" secondItem="14k-2U-j53" secondAttribute="bottom" constant="20" id="bev-VT-8fT"/>
+                            <constraint firstItem="FyG-LW-raV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="SvX-Kf-Jq6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FyG-LW-raV" secondAttribute="trailing" constant="20" id="W4P-Yf-MVh"/>
+                            <constraint firstItem="FyG-LW-raV" firstAttribute="top" secondItem="EXc-8Q-t4s" secondAttribute="bottom" constant="10" id="WT0-W8-omo"/>
+                            <constraint firstItem="PJY-sH-MLx" firstAttribute="top" secondItem="14k-2U-j53" secondAttribute="bottom" constant="10" id="bev-VT-8fT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PJY-sH-MLx" secondAttribute="trailing" constant="20" id="dja-uQ-aeU"/>
                             <constraint firstItem="PJY-sH-MLx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="gUO-GG-gHP"/>
                             <constraint firstItem="tej-o5-mXW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ihE-Py-D4T"/>
@@ -107,6 +130,7 @@
                     <connections>
                         <outlet property="appIDTextField" destination="tej-o5-mXW" id="5A9-YF-QbF"/>
                         <outlet property="envelopeResultTextView" destination="EXc-8Q-t4s" id="G4N-mB-rdp"/>
+                        <outlet property="logTextView" destination="FyG-LW-raV" id="jNa-3U-e0T"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
