--- a/LRAtsSDKSample/Internal/Base.lproj/Main.storyboard
+++ b/LRAtsSDKSample/Internal/Base.lproj/Main.storyboard
@@ -55,13 +55,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Envelope result:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJY-sH-MLx">
-                                <rect key="frame" x="20" y="204.33333333333334" width="353" height="17"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                <rect key="frame" x="20" y="204.33333333333334" width="353" height="14.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EXc-8Q-t4s">
-                                <rect key="frame" x="20" y="231.33333333333337" width="353" height="100"/>
+                                <rect key="frame" x="20" y="228.66666666666663" width="353" height="100"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="750" constant="100" id="MRJ-Og-ggJ"/>
@@ -82,8 +82,14 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SDK Debug Output:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8Z-Hv-3Pn">
+                                <rect key="frame" x="20" y="338.66666666666669" width="353" height="14.333333333333314"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FyG-LW-raV">
-                                <rect key="frame" x="20" y="341.33333333333326" width="353" height="466.66666666666674"/>
+                                <rect key="frame" x="20" y="363" width="353" height="450"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="12"/>
@@ -106,10 +112,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="14k-2U-j53" firstAttribute="top" secondItem="tej-o5-mXW" secondAttribute="bottom" constant="10" id="2uM-ST-lMM"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FyG-LW-raV" secondAttribute="bottom" constant="10" id="74O-oC-nWW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FyG-LW-raV" secondAttribute="bottom" constant="5" id="62Q-hd-Wdz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tej-o5-mXW" secondAttribute="trailing" constant="20" id="ATd-zH-Dwt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bhj-7U-S1Y" secondAttribute="trailing" constant="20" id="AY2-QZ-J7t"/>
                             <constraint firstItem="Bhj-7U-S1Y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Agk-4Q-9Q9"/>
+                            <constraint firstItem="L8Z-Hv-3Pn" firstAttribute="top" secondItem="EXc-8Q-t4s" secondAttribute="bottom" constant="10" id="FOk-ck-8ae"/>
                             <constraint firstItem="EXc-8Q-t4s" firstAttribute="top" secondItem="PJY-sH-MLx" secondAttribute="bottom" constant="10" id="GaH-5Z-iRe"/>
                             <constraint firstItem="14k-2U-j53" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="HEL-x3-AIn"/>
                             <constraint firstItem="EXc-8Q-t4s" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Hlo-iX-JWA"/>
@@ -117,12 +124,14 @@
                             <constraint firstItem="Bhj-7U-S1Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="SSi-Ui-sHk"/>
                             <constraint firstItem="FyG-LW-raV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="SvX-Kf-Jq6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FyG-LW-raV" secondAttribute="trailing" constant="20" id="W4P-Yf-MVh"/>
-                            <constraint firstItem="FyG-LW-raV" firstAttribute="top" secondItem="EXc-8Q-t4s" secondAttribute="bottom" constant="10" id="WT0-W8-omo"/>
                             <constraint firstItem="PJY-sH-MLx" firstAttribute="top" secondItem="14k-2U-j53" secondAttribute="bottom" constant="10" id="bev-VT-8fT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PJY-sH-MLx" secondAttribute="trailing" constant="20" id="dja-uQ-aeU"/>
+                            <constraint firstItem="L8Z-Hv-3Pn" firstAttribute="bottom" secondItem="FyG-LW-raV" secondAttribute="top" constant="-10" id="f61-tY-b2s"/>
                             <constraint firstItem="PJY-sH-MLx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="gUO-GG-gHP"/>
                             <constraint firstItem="tej-o5-mXW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ihE-Py-D4T"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="L8Z-Hv-3Pn" secondAttribute="trailing" constant="20" id="rBs-QV-KHP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EXc-8Q-t4s" secondAttribute="trailing" constant="20" id="vXp-JX-611"/>
+                            <constraint firstItem="L8Z-Hv-3Pn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="vqu-f0-VVB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="14k-2U-j53" secondAttribute="trailing" constant="20" id="vrF-Hn-KZ1"/>
                             <constraint firstItem="tej-o5-mXW" firstAttribute="top" secondItem="Bhj-7U-S1Y" secondAttribute="bottom" constant="10" id="xPx-pJ-YJ5"/>
                         </constraints>
